# aioevents

./: .gitignore  .readthedocs.yaml  Justfile  LICENSE  README.md  eventdemo.py  pyproject.toml  setup.py  types_test.py
.github/workflows/: python-mypy.yml  python-publish.yml
aioevents/: __init__.py
docs/: .gitignore  Makefile  apiref.rst  conf.py  eventdemo.py  index.rst  sample.rst
tests/: conftest.py  test_annotations.py  test_basics.py  test_duck.py  test_trigger.py
